added new files

--- a/src/app/components/super-admin/create-admin/create-admin.component.html
+++ b/src/app/components/super-admin/create-admin/create-admin.component.html
@@ -1,1 +1,76 @@
-<p>create-admin works!</p>
+<div class="container">
+
+
+  <mat-table [dataSource]="admins" class="mat-elevation-z8">
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+      <mat-cell *matCellDef="let admin" class="mat-cell">{{ admin.name }}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="mobilenumber">
+      <mat-header-cell *matHeaderCellDef>Mobile Number</mat-header-cell>
+      <mat-cell *matCellDef="let admin">{{ admin.mobilenumber }}</mat-cell>
+    </ng-container>
+
+
+
+    <mat-header-row *matHeaderRowDef="['name', 'mobilenumber']"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: ['name', 'mobilenumber'];"></mat-row>
+  </mat-table>
+
+  <div class="form-box container">
+    <div class="form">
+      <div class="form-fields">
+        <h1>Add admins</h1>
+        <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
+          <p>
+            <!-- <mat-form-field appearance="fill">
+              <mat-label>Name:</mat-label>
+              <input matInput formControlName="name">
+            </mat-form-field> -->
+          </p>
+          <table class="table table-bordered" formArrayName="users">
+            <tbody>
+              <tr>
+                <th colspan="3">Add admin:</th>
+                <th width="150px">
+                  <button type="button" (click)="addUser()" mat-raised-button color="primary">Add More</button>
+                </th>
+              </tr>
+              <tr *ngFor="let user of users().controls; let i=index" [formGroupName]="i">
+                <td>
+                  <mat-form-field appearance="fill">
+                    <mat-label>Name:</mat-label>
+                    <input matInput formControlName="name">
+                  </mat-form-field>
+                </td>
+                <td>
+                  <mat-form-field appearance="fill">
+                    <mat-label>Mobile Number:</mat-label>
+                    <input matInput formControlName="mobilenumber">
+                  </mat-form-field>
+                </td>
+                <td>
+                  <mat-form-field appearance="fill">
+                    <mat-label>User Type Password:</mat-label>
+                    <input matInput formControlName="usertypepassword">
+                  </mat-form-field>
+                </td>
+                <td>
+                  <button (click)="removeUser(i)" mat-raised-button color="warn">Remove</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <button mat-raised-button color="primary">Submit</button>
+        </form>
+        <br/>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <div class="copyright container"><br><br>
+      <p>2024 Copyright ©. All Rights Reserved Design and Development</p>
+    </div>
+  </footer>
+</div>
