--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -7,7 +7,7 @@
                 <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
                     <mat-icon>menu</mat-icon>
                 </button>
-                <button mat-icon-button><mat-icon>DMy App</mat-icon></button>
+                <button mat-icon-button><mat-icon>Demo app</mat-icon></button>
             </div>
             <span class="example-spacer"></span>
             <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
@@ -22,6 +22,10 @@
             </button>
         </mat-toolbar>
     </p>
+    <button mat-button (click)="goBack()" >
+      <mat-icon>arrow_back</mat-icon>
+      Back
+    </button>
     <div style="display: flex; flex-direction: row; align-items: center; justify-content: space-around;">
 
 
