--- a/src/app/components/admin/admin-entitites/admin-entitites.component.html
+++ b/src/app/components/admin/admin-entitites/admin-entitites.component.html
@@ -4,11 +4,8 @@
             <div class="back-link">
                 <img src="assets\back.svg" alt="">
 
-                <button mat-button (click)="goBack()" >
-                    <mat-icon>arrow_back</mat-icon>
-                    Back
-                </button>            </div>
-        
+                        </div>
+
         </div>
     </div>
 
@@ -61,7 +58,7 @@
                             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                             <mat-datepicker #picker></mat-datepicker>
                         </mat-form-field>
-                        
+
 
                     </mat-card-content>
 
