--- a/src/app/super-admin/super-admin.component.html
+++ b/src/app/super-admin/super-admin.component.html
@@ -1,5 +1,31 @@
 <div>
+  <div>
     <h3>super admin component</h3>
-    <button (click)="logout()">logout</button>
-    <router-outlet></router-outlet>
+    <p>
+      <mat-toolbar color="primary" style="display:  flex; justify-content: space-around;">
+          <div>
+              <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+                  <mat-icon>menu</mat-icon>
+              </button>
+              <button mat-icon-button><mat-icon>Demo app</mat-icon></button>
+          </div>
+          <span class="example-spacer"></span>
+          <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+              <mat-icon>favorite</mat-icon>
+          </button>
+          <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+              <mat-icon>share</mat-icon>
+          </button>
+          <button mat-button (click)="logout()">
+              <mat-icon>exit_to_app</mat-icon>
+              Logout
+          </button>
+      </mat-toolbar>
+  </p>
+  </div>
+  <button mat-button (click)="goBack()" >
+    <mat-icon>arrow_back</mat-icon>
+    Back
+  </button>
+        <router-outlet></router-outlet>
 </div>
