--- a/src/app/components/super-admin/create-admin/create-admin.component.html
+++ b/src/app/components/super-admin/create-admin/create-admin.component.html
@@ -1,76 +1,36 @@
-<div class="container">
+<table mat-table [dataSource]="getData()" class="mat-elevation-z8">
+  <ng-container matColumnDef="fullName">
+    <th mat-header-cell *matHeaderCellDef>Full Name</th>
+    <td mat-cell *matCellDef="let element">{{element.fullName}}</td>
+  </ng-container>
+  <ng-container matColumnDef="email">
+    <th mat-header-cell *matHeaderCellDef>Email</th>
+    <td mat-cell *matCellDef="let element">{{element.email}}</td>
+  </ng-container>
+  <ng-container matColumnDef="number">
+    <th mat-header-cell *matHeaderCellDef>Number</th>
+    <td mat-cell *matCellDef="let element">{{element.number}}</td>
+  </ng-container>
+  <ng-container matColumnDef="password">
+    <th mat-header-cell *matHeaderCellDef>Password</th>
+    <td mat-cell *matCellDef="let element">{{element.password}}</td>
+  </ng-container>
 
+  <tr mat-header-row *matHeaderRowDef="['fullName', 'email', 'number', 'password']"></tr>
+  <tr mat-row *matRowDef="let row; columns: ['fullName', 'email', 'number', 'password'];"></tr>
+</table>
 
-  <mat-table [dataSource]="admins" class="mat-elevation-z8">
-    <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
-      <mat-cell *matCellDef="let admin" class="mat-cell">{{ admin.name }}</mat-cell>
-    </ng-container>
+<form (ngSubmit)="saveData()">
+  <mat-form-field>
+    <input matInput placeholder="Full Name" [(ngModel)]="formData.fullName" name="fullName">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Email" [(ngModel)]="formData.email" name="email">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput type="number" placeholder="Number" [(ngModel)]="formData.number" name="number">
+  </mat-form-field>
+ 
+  <button mat-raised-button color="primary" type="submit">Submit</button>
+</form>
 
-    <ng-container matColumnDef="mobilenumber">
-      <mat-header-cell *matHeaderCellDef>Mobile Number</mat-header-cell>
-      <mat-cell *matCellDef="let admin">{{ admin.mobilenumber }}</mat-cell>
-    </ng-container>
-
-
-
-    <mat-header-row *matHeaderRowDef="['name', 'mobilenumber']"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: ['name', 'mobilenumber'];"></mat-row>
-  </mat-table>
-
-  <div class="form-box container">
-    <div class="form">
-      <div class="form-fields">
-        <h1>Add admins</h1>
-        <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
-          <p>
-            <!-- <mat-form-field appearance="fill">
-              <mat-label>Name:</mat-label>
-              <input matInput formControlName="name">
-            </mat-form-field> -->
-          </p>
-          <table class="table table-bordered" formArrayName="users">
-            <tbody>
-              <tr>
-                <th colspan="3">Add admin:</th>
-                <th width="150px">
-                  <button type="button" (click)="addUser()" mat-raised-button color="primary">Add More</button>
-                </th>
-              </tr>
-              <tr *ngFor="let user of users().controls; let i=index" [formGroupName]="i">
-                <td>
-                  <mat-form-field appearance="fill">
-                    <mat-label>Name:</mat-label>
-                    <input matInput formControlName="name">
-                  </mat-form-field>
-                </td>
-                <td>
-                  <mat-form-field appearance="fill">
-                    <mat-label>Mobile Number:</mat-label>
-                    <input matInput formControlName="mobilenumber">
-                  </mat-form-field>
-                </td>
-                <td>
-                  <mat-form-field appearance="fill">
-                    <mat-label>User Type Password:</mat-label>
-                    <input matInput formControlName="usertypepassword">
-                  </mat-form-field>
-                </td>
-                <td>
-                  <button (click)="removeUser(i)" mat-raised-button color="warn">Remove</button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <button mat-raised-button color="primary">Submit</button>
-        </form>
-        <br/>
-      </div>
-    </div>
-  </div>
-  <footer>
-    <div class="copyright container"><br><br>
-      <p>2024 Copyright ©. All Rights Reserved Design and Development</p>
-    </div>
-  </footer>
-</div>
